[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://pages/sheets/create_dossier.gd" type="Script" id=4]

[node name="Create_dossier" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 520.0
margin_bottom = 29.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "KEY_CREATE_EDIT_DIR"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 37.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 520.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inputs" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 520.0
margin_bottom = 899.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 520.0
margin_bottom = 257.0
size_flags_vertical = 3

[node name="Titre" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
margin_top = 261.0
margin_right = 520.0
margin_bottom = 333.0

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/Inputs/Titre"]
margin_right = 520.0
margin_bottom = 29.0
text = "KEY_NOM"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/Inputs/Titre"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 72.0
max_length = 128
placeholder_text = "KEY_NOM_DIR"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 337.0
margin_right = 520.0
margin_bottom = 594.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
visible = false
margin_top = 568.0
margin_right = 520.0
margin_bottom = 608.0

[node name="Bt_Delete" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2"]
margin_right = 258.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_DELETE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Inputs"]
margin_top = 598.0
margin_right = 520.0
margin_bottom = 638.0

[node name="Bt_Cancel" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer"]
margin_right = 258.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_ANNULER"

[node name="Bt_Validate" type="Button" parent="VBoxContainer/ScrollContainer/Inputs/VBoxContainer"]
margin_left = 262.0
margin_right = 520.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_VALIDER"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/ScrollContainer/Inputs"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 642.0
margin_right = 520.0
margin_bottom = 899.0
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer2/Bt_Delete" to="." method="_on_Bt_Delete_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer/Bt_Cancel" to="." method="_on_Bt_Cancel_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Inputs/VBoxContainer/Bt_Validate" to="." method="_on_Bt_Validate_pressed"]
